syntax = "proto3";
package kratos.api;

option go_package = "galileo/file/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Trace trace = 3;
  Auth auth = 4;
  Service service = 5;
}

message Trace {
  string endpoint = 1;
}

message Service {}



message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration read_timeout = 5;
    google.protobuf.Duration write_timeout = 6;
    google.protobuf.Duration dial_timeout = 7;
  }
  message Oss {
    string accessKey = 1;
    string accessSecret = 2;
    string endpoint = 3;
    string bucketName = 4;
    string region = 5;
    string stsExpire = 6;
    string stsRoleArn = 7;
  }
  Database database = 1;
  Redis redis = 2;
  Oss oss = 3;
}

message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
  }
  Consul consul = 1;
}

message Auth {
  string serviceKey = 1;
  string apiKey = 2;
  string jwtKey = 3;
}